<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_small" >

        <TextView
            style="@style/TextLargeBoldWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Hello fellow\nConqueror of Tyria," />

        <TextView
            style="@style/TextMediumBoldWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_donations_text" />

        <TextView
            style="@style/TextLargeBoldWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:layout_marginTop="@dimen/padding_small"
            android:gravity="center"
            android:text="@string/ingame_account_name" />

        <TextView
            style="@style/TextMediumBoldWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_donations_thanks" />
    </LinearLayout>

</ScrollView>