<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:dragView="@+id/menu_header"
        sothree:panelHeight="68dp"
        sothree:paralaxOffset="100dp"
        sothree:shadowHeight="4dp" >

        <!-- Main Content -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="?android:attr/actionBarSize" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/image_events" />

            <FrameLayout
                android:id="@+id/fragment_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <!-- Menu Content -->

        <LinearLayout
            android:id="@+id/menu_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red_dark"
            android:clickable="true"
            android:focusable="false"
            android:orientation="vertical" >

            <!-- Visible Part -->

            <LinearLayout
                android:id="@+id/menu_header"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@color/gray_transparent"
                android:orientation="horizontal" >

                <FrameLayout
                    android:id="@+id/activity_main_current_event_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </FrameLayout>
            </LinearLayout>

            <!-- Additional Part -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/sliding_panel_alarms"
                    style="@style/ButtonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_action_alarms"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/sliding_panel_alarms" />

                <Button
                    android:id="@+id/sliding_panel_items"
                    style="@style/ButtonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_storage"
                    android:text="@string/sliding_panel_items" />

                <Button
                    android:id="@+id/sliding_panel_about"
                    style="@style/ButtonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_about"
                    android:text="@string/sliding_panel_about" />
            </LinearLayout>
        </LinearLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

</RelativeLayout>